--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: data_usage_monitor
+name: ABRAR
 description: تطبيق لمراقبة استهلاك بيانات الإنترنت.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -58,10 +58,14 @@ dependencies:
   # الإشعارات والخدمات الخلفية
   flutter_local_notifications: ^19.0.0
   flutter_background_service: ^5.0.1
-  firebase_core: ^3.13.0
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.15.8
+  # firebase_analytics: ^11.8.0
+  shared_preferences: ^2.2.2
   go_router: ^14.8.1
   flutter_bloc: ^9.1.0
   equatable: ^2.0.7
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +77,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.3
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -86,8 +91,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assets/images/
+  assets:
+    - assets/icon/
   #   - images/a_dot_burr.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -115,3 +120,22 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# تكوين أيقونة التطبيق
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 # اندرويد 5.0
+  web:
+    generate: true
+    image_path: "assets/icon/icon.png"
+    background_color: "#FFFFFF"
+    theme_color: "#FFFFFF"
+  windows:
+    generate: true
+    image_path: "assets/icon/icon.png"
+    icon_size: 48 # حجم الأيقونة بالبكسل
+  macos:
+    generate: true
+    image_path: "assets/icon/icon.png"
